# audiotranscode_ffi

./: .gitignore  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: audiotranscode_ffi.dart  audiotranscode_ffi_bindings_generated.dart
linux/: CMakeLists.txt
macos/: audiotranscode_ffi.podspec
macos/Classes/: audiotranscode_ffi.cxx
src/: AudioTranscoder.cxx  AudioTranscoder.h  CMakeCache.txt  CMakeLists.txt  FlacMetadata.cxx  FlacMetadata.h  Makefile  audiotranscode_ffi.cxx  audiotranscode_ffi.h  cmake_install.cmake  libaudiotranscode_ffi.dylib
windows/: CMakeLists.txt
